--- a/compare-prc.html
+++ b/compare-prc.html
@@ -1989,7 +1989,7 @@ body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-
 </section>
 <section class="category-section" data-category="metabolic" style="--cat-color: #EF4444">
 <div class="category-header" style="border-left-color: #EF4444">
-<div class="category-name">Metabolic & Fat Loss</div>
+<div class="category-name">Metabolic & Metabolic Research</div>
 <div class="category-count">54 products</div>
 </div>
 <div class="cards-grid">
