--- a/prcpeptides_mockup.html
+++ b/prcpeptides_mockup.html
@@ -1646,7 +1646,7 @@
                 price: 25,
                 coa: true,
                 shortDesc: "Small molecule NNMT inhibitor increasing cellular NAD+ availability through enzymatic blockade.",
-                fullDesc: "5-Amino-1-methylquinolinium targets a metabolic bottleneck: nicotinamide N-methyltransferase (NNMT), an enzyme that consumes NAD+ precursors by methylating nicotinamide for excretion. By inhibiting NNMT, 5-Amino-1MQ preserves intracellular nicotinamide, allowing its recycling back to NAD+ through the salvage pathway. Note: This is an oral small molecule, not an injectable peptide."
+                fullDesc: "5-Amino-1-methylquinolinium targets a metabolic bottleneck: nicotinamide N-methyltransferase (NNMT), an enzyme that consumes NAD+ precursors by methylating nicotinamide for excretion. By inhibiting NNMT, 5-Amino-1MQ preserves intracellular nicotinamide, allowing its recycling back to NAD+ through the salvage pathway. Note: This is an oral small molecule, not an Liquid Reagent peptide."
             },
             {
                 name: "Lipo-C MAX Blend",
