--- a/product_page_template.html
+++ b/product_page_template.html
@@ -98,7 +98,7 @@
 {{FULL_DESCRIPTION}}
 {{RESEARCH_APPLICATIONS}}
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for Liquid Reagent Preparation. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>{{STORAGE}}</p>
 {{FAQ_SECTION}}
