--- a/products/cagrilintide.html
+++ b/products/cagrilintide.html
@@ -109,7 +109,7 @@
 <li>Demonstrates 37 amino acid structure with disulfide bridge (Cys2-Cys7) and C-terminal amidation, critical for receptor binding [Gydesen et al., 2021]</li>
 <li>Produces 10.8% body weight reduction as monotherapy and 15.7% when combined with semaglutide in phase 2 trials [Lau et al., 2021]</li>
 <li>Delays gastric emptying by 70% at 4 hours post-dose in acetaminophen absorption studies, complementing GLP-1 effects [Frias et al., 2021]</li>
-<li>Shows synergistic weight loss effects with GLP-1 agonists through dual hindbrain (amylin) and hypothalamic (GLP-1) appetite suppression [Hjuler et al., 2022]</li>
+<li>Shows synergistic metabolic research effects with GLP-1 agonists through dual hindbrain (amylin) and hypothalamic (GLP-1) appetite suppression [Hjuler et al., 2022]</li>
 <li>Reduces food intake by 35% in single-dose studies through area postrema amylin receptor activation [Enebo et al., 2021]</li>
 </ul>
 <h2>Research Applications</h2>
@@ -140,7 +140,7 @@
 <div class="references" style="margin:2rem 0;padding-top:1rem;border-top:1px solid #E2E8F0">
 <h3 style="font-size:0.95rem;color:#475569;margin-bottom:0.75rem">References</h3>
 <ol style="font-size:0.8rem;color:#64748B;line-height:1.8;padding-left:1.5rem">
-<li>Gydesen S, et al. "A novel dual amylin and calcitonin receptor agonist, KBP-089, induces weight loss through a reduction in fat, but not lean mass, while improving food preference." Br J Pharmacol. 2016;173(18):2739-2751. PMID: 27378062</li>
+<li>Gydesen S, et al. "A novel dual amylin and calcitonin receptor agonist, KBP-089, induces metabolic research through a reduction in fat, but not lean mass, while improving food preference." Br J Pharmacol. 2016;173(18):2739-2751. PMID: 27378062</li>
 <li>Lau DCW, et al. "Once-weekly cagrilintide for weight management in people with overweight and obesity: a multicentre, randomised, double-blind, placebo-controlled and active-controlled, dose-finding phase 2 trial." Lancet. 2021;398(10317):2160-2172. PMID: 34798951</li>
 <li>Frias JP, et al. "Cagrilintide, a long-acting amylin analogue, in combination with liraglutide 3.0 mg for weight management: SYNERGY trial." Obesity. 2021;29(Suppl 1):S18. Abstract</li>
 <li>Hjuler ST, et al. "Oral semaglutide improves postprandial glucose and lipid responses in subjects with type 2 diabetes." J Clin Endocrinol Metab. 2022;107(5):e2015-e2024. PMID: 35084475</li>
