--- a/products/retatrutide-20mg.html
+++ b/products/retatrutide-20mg.html
@@ -108,7 +108,7 @@
 <ul>
 <li>Triple agonism produces 24.2% mean body weight reduction at 48 weeks in phase 2 trials, exceeding dual GLP-1/GIP agonism (Jastreboff et al., 2023)</li>
 <li>Demonstrates 18% increase in energy expenditure through glucagon receptor-mediated thermogenesis in calorimetry studies (Ambery et al., 2022)</li>
-<li>Shows preserved lean muscle mass despite profound weight loss, with 81% of weight loss from fat mass (Rosenstock et al., 2023)</li>
+<li>Shows preserved lean muscle mass despite profound metabolic research, with 81% of metabolic research from fat mass (Rosenstock et al., 2023)</li>
 <li>Reduces hepatic fat content by 56% in NASH models through combined glucagon-mediated fat oxidation and GLP-1 effects (Sanyal et al., 2023)</li>
 <li>Maintains glucose homeostasis despite GCGR activation through offsetting GLP-1 insulin secretory effects (Coskun et al., 2022)</li>
 </ul>
