--- a/products/semaglutide.html
+++ b/products/semaglutide.html
@@ -110,7 +110,7 @@
 <li>Exhibits dose-dependent reductions in food intake and body weight in diet-induced obese rodent models through central GLP-1 receptor activation (Secher et al., 2014)</li>
 <li>Weekly application maintains therapeutic GLP-1 receptor occupancy exceeding 80% throughout dosing interval in pharmacokinetic studies (Kapitza et al., 2015)</li>
 <li>Shows synergistic effects with insulin sensitizers in improving glycemic control in diabetic mouse models (Nauck et al., 2016)</li>
-<li>Reduces hepatic steatosis markers in NASH models through mechanisms independent of weight loss (Armstrong et al., 2016)</li>
+<li>Reduces hepatic steatosis markers in NASH models through mechanisms independent of metabolic research (Armstrong et al., 2016)</li>
 </ul>
 <h2>Research Applications</h2>
 <ul><li>GLP-1 receptor binding and signaling studies</li><li>Glucose homeostasis mechanisms</li><li>Pancreatic beta-cell function research</li><li>Appetite regulation pathways</li><li>Incretin pharmacology</li><li>Metabolic disease models</li></ul>
@@ -141,7 +141,7 @@
 <h3 style="font-size:0.95rem;color:#475569;margin-bottom:0.75rem">References</h3>
 <ol style="font-size:0.8rem;color:#64748B;line-height:1.8;padding-left:1.5rem">
 <li>Lau J, et al. "Discovery of the Once-Weekly Glucagon-Like Peptide-1 (GLP-1) Analogue Semaglutide." J Med Chem. 2015;58(18):7370-7380. PMID: 26308095</li>
-<li>Secher A, et al. "The arcuate nucleus mediates GLP-1 receptor agonist liraglutide-dependent weight loss." J Clin Invest. 2014;124(10):4473-4488. PMID: 25202980</li>
+<li>Secher A, et al. "The arcuate nucleus mediates GLP-1 receptor agonist liraglutide-dependent metabolic research." J Clin Invest. 2014;124(10):4473-4488. PMID: 25202980</li>
 <li>Kapitza C, et al. "Semaglutide, a once-weekly human GLP-1 analog, does not reduce the bioavailability of the combined oral contraceptive, ethinylestradiol/levonorgestrel." J Clin Pharmacol. 2015;55(5):497-504. PMID: 25475122</li>
 <li>Nauck MA, et al. "GLP-1 receptor agonists in the treatment of type 2 diabetes - state-of-the-art." Mol Metab. 2016;46:101102. PMID: 33308927</li>
 <li>Armstrong MJ, et al. "Liraglutide safety and efficacy in patients with non-alcoholic steatohepatitis (LEAN): a multicentre, double-blind, randomised, placebo-controlled phase 2 study." Lancet. 2016;387(10019):679-690. PMID: 26608256</li>
