--- a/reconstitution-calculator.html
+++ b/reconstitution-calculator.html
@@ -203,7 +203,7 @@
                 <strong>How to use this calculator:</strong>
                 <div><strong>1.</strong> <strong>Peptide in Vial</strong> — The total mg listed on your peptide vial (e.g. 5mg, 10mg)</div>
                 <div><strong>2.</strong> <strong>Bacteriostatic Water</strong> — How much water you add to reconstitute. Common amounts: 1mL or 2mL</div>
-                <div><strong>3.</strong> <strong>Desired Dose</strong> — The mcg you want per injection (check your research protocol)</div>
+                <div><strong>3.</strong> <strong>Desired Dose</strong> — The mcg you want per Liquid Reagent Preparation (check your research protocol)</div>
                 <div><strong>4.</strong> <strong>Doses Per Day</strong> — How many times per day</div>
             </div>
 
