--- a/reddit.html
+++ b/reddit.html
@@ -808,7 +808,7 @@ Some vendors include all this - definitely check before ordering.</div>
 - Provides COAs with batch numbers
 - Ships next day with cold packs
 - Includes reconstitution supplies
-- Responsive customer service
+- Responsive Registered Institution service
 
 **Red flags:**
 - No testing documentation
@@ -972,7 +972,7 @@ If they're not listed there, that doesn't necessarily mean they're bad, but you'
 For research purposes, quality assurance is crucial.</div>
                     </div>
 
-                    <h3>Template Set 7: First-Time Buyer Questions</h3>
+                    <h3>Template Set 7: First-Time Lead Researcher Questions</h3>
 
                     <div class="template-box">
                         <div class="template-header">
