--- a/products/tirzepatide-30mg.html
+++ b/products/tirzepatide-30mg.html
@@ -106,11 +106,11 @@
 <p>The dual receptor activation creates synergistic metabolic effects that exceed simple additive responses. GIP receptor engagement appears to enhance insulin sensitivity in adipose tissue while GLP-1 receptor activity drives the potent appetite-suppressive effects. The C20 fatty acid modification at lysine-20 enables albumin binding similar to semaglutide, providing sustained drug exposure with elimination half-life approaching 5 days. This allows once-weekly dosing while maintaining both GIP and GLP-1 receptor engagement throughout the dosing interval.</p>
 <h2>Key Research Findings</h2>
 <ul>
-<li>Dual GIP/GLP-1 receptor activation produces superior weight loss compared to selective GLP-1 agonism in head-to-head comparisons (12.4% vs 6.2% at 40 weeks) (Frias et al., 2021)</li>
+<li>Dual GIP/GLP-1 receptor activation produces superior metabolic research compared to selective GLP-1 agonism in head-to-head comparisons (12.4% vs 6.2% at 40 weeks) (Frias et al., 2021)</li>
 <li>Demonstrates preserved beta-cell function markers and improved HOMA-B scores in diabetic models through GIP-mediated islet protection (Coskun et al., 2018)</li>
 <li>Shows reduced inflammatory adipokine secretion from adipocytes in obesity models through dual incretin signaling (Samms et al., 2020)</li>
 <li>Weekly 15mg dosing maintains steady-state GIP and GLP-1 receptor occupancy >70% throughout dosing interval (Thomas et al., 2021)</li>
-<li>Reduces hepatic triglyceride content by 44% in NASH models independent of weight loss magnitude (Hartman et al., 2020)</li>
+<li>Reduces hepatic triglyceride content by 44% in NASH models independent of metabolic research magnitude (Hartman et al., 2020)</li>
 </ul>
 <h2>Research Applications</h2>
 <ul><li>Dual incretin pathway research</li><li>GIP/GLP-1 receptor synergy</li><li>Incretin receptor pharmacology</li><li>Metabolic signaling cascade studies</li><li>Pancreatic islet function</li><li>Comparative incretin biology</li></ul>
