--- a/shop.html
+++ b/shop.html
@@ -1480,7 +1480,7 @@
             </div>
             <div style="font-size:0.72rem;color:#94A3B8;margin-bottom:1rem">support@prcpeptides.com</div>
             <div class="footer-disclaimer">
-                <span class="research-only">FOR RESEARCH PURPOSES ONLY.</span> All products are strictly for in vitro laboratory research. PRC Labs LLC does not provide instructions for human administration. Headquartered in Santa Cruz, CA. Must be 18+ to purchase.
+                <span class="research-only">FOR RESEARCH PURPOSES ONLY.</span> PRC Labs LLC provides high-purity reagents strictly for in vitro laboratory research. Our products are not for human or veterinary use, nor are they intended to diagnose, treat, cure, or prevent any disease. By purchasing, the buyer acknowledges the hazards associated with the use of these chemicals and confirms they are a qualified researcher. Headquartered in Santa Cruz, CA.
             </div>
             <div style="font-size:0.65rem;color:#94A3B8;margin-top:1rem">© 2026 PRC Labs LLC. All rights reserved.</div>
         </div>
@@ -1657,7 +1657,7 @@
                 price: 25,
                 coa: true,
                 shortDesc: "Small molecule NNMT inhibitor increasing cellular NAD+ availability through enzymatic blockade.",
-                fullDesc: "5-Amino-1-methylquinolinium targets a metabolic bottleneck: nicotinamide N-methyltransferase (NNMT), an enzyme that consumes NAD+ precursors by methylating nicotinamide for excretion. By inhibiting NNMT, 5-Amino-1MQ preserves intracellular nicotinamide, allowing its recycling back to NAD+ through the salvage pathway. Note: This is an oral small molecule, not an injectable peptide."
+                fullDesc: "5-Amino-1-methylquinolinium targets a metabolic bottleneck: nicotinamide N-methyltransferase (NNMT), an enzyme that consumes NAD+ precursors by methylating nicotinamide for excretion. By inhibiting NNMT, 5-Amino-1MQ preserves intracellular nicotinamide, allowing its recycling back to NAD+ through the salvage pathway. Note: This is an oral small molecule, not an Liquid Reagent peptide."
             },
             {
                 name: "Lipo-C MAX Blend",
