--- a/shop.html
+++ b/shop.html
@@ -1241,7 +1241,7 @@
                     <a href="#categories" onclick="event.preventDefault();this.parentElement.classList.toggle('open')" style="display:inline-flex;align-items:center;gap:3px">Categories <svg width="10" height="6" viewBox="0 0 10 6" fill="none" style="margin-top:1px"><path d="M1 1l4 4 4-4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/></svg></a>
                     <div class="nav-dropdown-menu">
                         <a href="#" onclick="filterCat('GLP Receptor Agonists');return false">GLP Receptor Agonists</a>
-                        <a href="#" onclick="filterCat('Structural Signaling Peptides');return false">Structural Signaling Peptides</a>
+                        <a href="#" onclick="filterCat('Structural Research');return false">Structural Research</a>
                         <a href="#" onclick="filterCat('Growth Hormone Secretagogues');return false">Growth Hormone Secretagogues</a>
                         <a href="#" onclick="filterCat('Metabolic Pathway Reagents');return false">Metabolic Pathway Reagents</a>
                         <a href="#" onclick="filterCat('Antioxidants');return false">Antioxidants</a>
@@ -1870,7 +1870,7 @@
         // Category data
         var categoryData = [
             { id: 'glp', name: 'GLP Receptor Agonists', count: 5 },
-            { id: 'tissue', name: 'Structural Signaling Peptides', count: 6 },
+            { id: 'tissue', name: 'Structural Research', count: 6 },
             { id: 'gh', name: 'Growth Hormone', count: 5 },
             { id: 'metabolic', name: 'Metabolic Pathway Reagents', count: 7 },
             { id: 'antioxidants', name: 'Antioxidants', count: 7 },
@@ -2045,7 +2045,7 @@
                 'neuropeptides': 'Neuropeptides',
                 'glp': 'GLP Agonists',
                 'gh': 'Growth Hormone',
-                'tissue': 'Structural Signaling Peptides',
+                'tissue': 'Structural Research',
                 'metabolic': 'Metabolic Pathway Reagents',
                 'antioxidants': 'Antioxidants',
                 'longevity': 'Cellular Research Reagents',
