Compliance: update brand voice, emphasize lab-only warnings

--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
     </style>
 </head>
 <body>
-    <div class="promo-bar">FREE reconstitution kit with every order &nbsp;|&nbsp; FREE shipping over $150</div>
+    <div class="promo-bar">Laboratory preparation supplies included with every order &nbsp;|&nbsp; FREE shipping over $150</div>
 
     <header id="header">
         <div class="header-content">
@@ -113,8 +113,8 @@
     </div>
 
     <section class="page-hero">
-        <h1>Built by Researchers, for Researchers</h1>
-        <p>Purity, transparency, and fair pricing — that's it.</p>
+        <h1>High-Efficiency Procurement for Independent Research</h1>
+        <p>Eliminating predatory markups in the reagent supply chain — that's it.</p>
     </section>
 
     <div class="content-wrapper">
@@ -131,10 +131,10 @@
                 <li>≥98% purity on all peptides</li>
                 <li>Third-party tested (HPLC &amp; Mass Spectrometry)</li>
                 <li>Certificates of Analysis (COAs) available for every product</li>
-                <li>Free reconstitution kit included with every order</li>
+                <li>Complimentary laboratory reagent preparation kit included with every order</li>
             </ul>
             <div class="highlight-box">
-                <p>Every order ships with a free reconstitution kit — bacteriostatic water, syringes, and alcohol swabs — so you can get to work immediately.</p>
+                <p>Every order ships with a complimentary laboratory reagent preparation kit — bacteriostatic water, syringes, and alcohol swabs — so you can get to work immediately.</p>
             </div>
         </div>
 
@@ -177,7 +177,7 @@
                 <a href="mailto:support@prcpeptides.com">Contact</a>
             </div>
             <div style="font-size:0.72rem;color:#94A3B8;margin-bottom:1rem">support@prcpeptides.com</div>
-            <div class="footer-disclaimer">
+            <div class="footer-disclaimer" style="background:#7F1D1D;padding:16px;border-radius:8px;margin-bottom:16px">
                 <span class="research-only">FOR RESEARCH PURPOSES ONLY.</span> All products are intended exclusively for laboratory research and are not intended for human consumption, diagnostic purposes, or therapeutic applications. Must be 18+ to purchase. By accessing this site, you acknowledge all products are for in vitro research use only.
             </div>
             <div style="font-size:0.65rem;color:#94A3B8;margin-top:1rem">© 2026 PRC Labs LLC. All rights reserved.</div>
