--- a/faq.html
+++ b/faq.html
@@ -19,7 +19,7 @@
             {"@type": "Question", "name": "Do you ship internationally?", "acceptedAnswer": {"@type": "Answer", "text": "Not currently. We ship within the United States only."}},
             {"@type": "Question", "name": "How long does shipping take?", "acceptedAnswer": {"@type": "Answer", "text": "Orders ship the next business day. Standard shipping takes 3-5 business days; expedited shipping is faster."}},
             {"@type": "Question", "name": "Is there free shipping?", "acceptedAnswer": {"@type": "Answer", "text": "Yes! All orders over $150 ship free."}},
-            {"@type": "Question", "name": "What's included with my order?", "acceptedAnswer": {"@type": "Answer", "text": "Every order includes a free reconstitution kit: bacteriostatic water, syringes, and alcohol swabs."}},
+            {"@type": "Question", "name": "What's included with my order?", "acceptedAnswer": {"@type": "Answer", "text": "Every order includes a complimentary laboratory reagent preparation kit: bacteriostatic water, syringes, and alcohol swabs."}},
             {"@type": "Question", "name": "What purity are your peptides?", "acceptedAnswer": {"@type": "Answer", "text": "All of our peptides are ≥98% purity, verified by independent third-party laboratory testing (HPLC &amp; Mass Spectrometry)."}},
             {"@type": "Question", "name": "Do you provide Certificates of Analysis (COAs)?", "acceptedAnswer": {"@type": "Answer", "text": "Yes. Email support@prcpeptides.com to request the COA for any product."}},
             {"@type": "Question", "name": "How should I store peptides?", "acceptedAnswer": {"@type": "Answer", "text": "Lyophilized (powder) peptides: store in the freezer at -20°C for long-term storage, or in the fridge at 2-8°C for short-term. Reconstituted peptides: refrigerate at 2-8°C and use within 30 days."}},
@@ -107,7 +107,7 @@
     </style>
 </head>
 <body>
-    <div class="promo-bar">FREE reconstitution kit with every order &nbsp;|&nbsp; FREE shipping over $150</div>
+    <div class="promo-bar">Laboratory preparation supplies included with every order &nbsp;|&nbsp; FREE shipping over $150</div>
 
     <header id="header">
         <div class="header-content">
@@ -177,7 +177,7 @@
 
             <details>
                 <summary>What's included with my order?</summary>
-                <div class="faq-answer">Every order ships with a <strong>free reconstitution kit</strong> that includes bacteriostatic water, syringes, and alcohol swabs — everything you need to get started with your research.</div>
+                <div class="faq-answer">Every order ships with a <strong>complimentary laboratory reagent preparation kit</strong> that includes bacteriostatic water, syringes, and alcohol swabs — everything you need to get started with your research.</div>
             </details>
         </div>
 
@@ -265,7 +265,7 @@
                 <a href="mailto:support@prcpeptides.com">Contact</a>
             </div>
             <div style="font-size:0.72rem;color:#94A3B8;margin-bottom:1rem">support@prcpeptides.com</div>
-            <div class="footer-disclaimer">
+            <div class="footer-disclaimer" style="background:#7F1D1D;padding:16px;border-radius:8px;margin-bottom:16px">
                 <span class="research-only">FOR RESEARCH PURPOSES ONLY.</span> All products are intended exclusively for laboratory research and are not intended for human consumption, diagnostic purposes, or therapeutic applications. Must be 18+ to purchase. By accessing this site, you acknowledge all products are for in vitro research use only.
             </div>
             <div style="font-size:0.65rem;color:#94A3B8;margin-top:1rem">© 2026 PRC Labs LLC. All rights reserved.</div>
