--- a/index.html
+++ b/index.html
@@ -1477,7 +1477,7 @@
                 <a href="mailto:support@prcpeptides.com">Contact</a>
             </div>
             <div style="font-size:0.72rem;color:#94A3B8;margin-bottom:1rem">support@prcpeptides.com</div>
-            <div class="footer-disclaimer">
+            <div class="footer-disclaimer" style="background:#7F1D1D;padding:16px;border-radius:8px;margin-bottom:16px">
                 <span class="research-only">FOR RESEARCH PURPOSES ONLY.</span> PRC Labs LLC provides high-purity reagents strictly for in vitro laboratory research. Our products are not for human or veterinary use, nor are they intended to diagnose, treat, cure, or prevent any disease. By purchasing, the buyer acknowledges the hazards associated with the use of these chemicals and confirms they are a qualified researcher. Headquartered in Santa Cruz, CA.
             </div>
             <div style="font-size:0.65rem;color:#94A3B8;margin-top:1rem">© 2026 PRC Labs LLC. All rights reserved.</div>
