--- a/compare.html
+++ b/compare.html
@@ -9,7 +9,8 @@
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
 :root{--navy:#0A1628;--blue:#2B7DE9;--blue-light:#3B8EF3;--green:#10B981;--green-soft:#059669;--amber:#F59E0B;--red:#EF4444;--white:#FFFFFF;--gray-50:#F8FAFC;--gray-100:#F1F5F9;--gray-200:#E2E8F0;--gray-300:#CBD5E1;--gray-400:#94A3B8;--gray-500:#64748B;--gray-600:#475569;--gray-700:#334155;--gray-800:#1E293B}
-body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;background:var(--white);color:var(--gray-800);line-height:1.6;-webkit-text-size-adjust:100%;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
+body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;background:var(--white);color:var(--gray-800);line-height:1.6;-webkit-text-size-adjust:100%;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;overflow-x:hidden;max-width:100vw;position:relative}
+html{overflow-x:hidden;max-width:100vw}
 .header{position:relative;padding:2.5rem 1.5rem 2rem;text-align:center;background:var(--white);border-bottom:1px solid var(--gray-200);overflow:hidden}
 .header::before{content:"";position:absolute;top:0;left:0;right:0;height:3px;background:linear-gradient(90deg,var(--blue),#06B6D4)}
 .header::after{content:none}
@@ -53,7 +54,7 @@ body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica N
 .filter-label{font-size:.85rem;color:var(--gray-700);font-weight:600;cursor:pointer;user-select:none;-webkit-user-select:none}
 .filter-info{font-size:.75rem;color:var(--gray-500);margin-top:.35rem;font-weight:500}
 .table-wrap{overflow-x:auto;-webkit-overflow-scrolling:touch}
-.table{width:100%;border-collapse:collapse;font-size:.85rem;min-width:700px}
+.table{width:100%;border-collapse:collapse;font-size:.85rem}
 .table thead{background:var(--gray-50);position:sticky;top:0;z-index:10;box-shadow:0 1px 0 var(--gray-200)}
 .table th{color:var(--gray-500);font-size:.625rem;font-weight:800;text-transform:uppercase;letter-spacing:1.5px;padding:1rem .85rem;text-align:left;border-bottom:2px solid var(--gray-200);white-space:nowrap;background:var(--gray-50)}
 .table tbody tr{border-bottom:1px solid var(--gray-100);transition:background-color .15s ease}
@@ -754,5 +755,12 @@ if(show)c++;
 document.getElementById("rc").textContent="Showing "+c+" of "+rows.length+" results";
 }
 document.getElementById('catPills').addEventListener('click',function(e){var pill=e.target.closest('.cat-pill');if(!pill)return;var pills=this.querySelectorAll('.cat-pill');pills.forEach(function(p){p.classList.remove('active');p.style.background='';p.style.color='';p.style.borderColor='';});pill.classList.add('active');var cat=pill.getAttribute('data-cat');if(cat==='all'){pill.style.background='#2B7DE9';}else{pill.style.background=catMap[cat].color;}pill.style.color='#fff';pill.style.borderColor='transparent';filt();});
+// Auto-resize iframe for Wix embedding
+function notifyParentHeight(){try{var h=document.documentElement.scrollHeight;window.parent.postMessage({type:'resize',height:h},'*');}catch(e){}}
+window.addEventListener('load',notifyParentHeight);
+new MutationObserver(notifyParentHeight).observe(document.body,{childList:true,subtree:true,attributes:true});
+window.addEventListener('resize',notifyParentHeight);
+// Prevent any horizontal bounce
+document.addEventListener('touchmove',function(e){if(document.documentElement.scrollWidth<=document.documentElement.clientWidth+1)return;},{passive:true});
 </script>
 </body></html>
